--- a/package.json
+++ b/package.json
@@ -1,13 +1,21 @@
 {
-  "name": "basex-be",
-  "version": "1.0.0",
-  "main": "index.js",
-  "repository": "https://github.com/GregTrifan/basex-be",
-  "author": "Grigore Gabriel Trifan <trifangaby71@protonmail.com>",
-  "license": "MIT",
-  "dependencies": {
-    "@now/node": "^1.8.5",
-    "ethers": "^5.6",
-    "express": "^4.18.2"
-  }
+    "name": "basex-be",
+    "version": "1.0.0",
+    "main": "index.js",
+    "repository": "https://github.com/GregTrifan/basex-be",
+    "author": "Grigore Gabriel Trifan <trifangaby71@protonmail.com>",
+    "license": "MIT",
+    "scripts": {
+        "dev": "nodemon index.js"
+    },
+    "dependencies": {
+        "@vercel/node": "^3.0.5",
+        "axios": "^1.5.0",
+        "dotenv": "^16.3.1",
+        "ethers": "^5.6",
+        "express": "^4.18.2"
+    },
+    "devDependencies": {
+        "nodemon": "^3.0.1"
+    }
 }
