--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dependencies": {
         "@vercel/node": "^3.0.5",
         "axios": "^1.5.0",
+        "cors": "^2.8.5",
         "dotenv": "^16.3.1",
         "ethers": "^5.6",
         "express": "^4.18.2"
