--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
         "ethers": "^5.6",
-        "express": "^4.18.2"
+        "express": "^4.18.2",
+        "sqlite3": "^5.1.6"
     },
     "devDependencies": {
         "nodemon": "^3.0.1"
