--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
         "dotenv": "^16.3.1",
         "ethers": "^5.6",
         "express": "^4.18.2",
-        "sqlite3": "^5.1.6"
+        "sqlite3": "^5.1.6",
+        "stripe": "^14.18.0"
     },
     "devDependencies": {
         "nodemon": "^3.0.1"
