--- a/.env.sample
+++ b/.env.sample
@@ -3,3 +3,5 @@ STRIPE_SECRET_KEY=sk_
 STRIPE_PUBLISHABLE_KEY=pk_
 STRIPE_WEBHOOK_SECRET=whsec_
 STATIC_DIR="https://genesis.re/"
+MAILGUN_API_KEY=
+MAILGUN_EMAIL=
