--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
         "dotenv": "^16.3.1",
         "ethers": "^5.6",
         "express": "^4.18.2",
+        "form-data": "^4.0.0",
+        "mailgun.js": "^10.2.1",
         "sqlite3": "^5.1.6",
         "stripe": "^14.18.0"
     },
