--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "start": "node --experimental-specifier-resolution=node --experimental-modules index.mjs"
     },
     "dependencies": {
+        "@types/stripe": "^8.0.417",
         "@vercel/node": "^3.0.5",
         "axios": "^1.5.0",
         "cors": "^2.8.5",
@@ -20,7 +21,7 @@
         "form-data": "^4.0.0",
         "mailgun.js": "^10.2.1",
         "sqlite3": "^5.1.6",
-        "stripe": "^14.18.0"
+        "stripe": "^15.7.0"
     },
     "devDependencies": {
         "esm": "^3.2.25",
